--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,9 @@ img {
   color: #c80000;
 }
 
+#sidebar {
+  background-color: #024c7d;
+}
 
 #sidebar-footer {
   position:absolute;
@@ -299,7 +302,8 @@ padding-bottom: 0;
   margin-top: 10px;
 }
 
-#main .issues-advanced-search {
+#main .issues-advanced-search,
+#main .issues-diagram-search {
   display: none;
 }
 
@@ -406,4 +410,8 @@ padding-bottom: 0;
   .loader .loader-indicator{
     top: 100px;
   }
+}
+
+.area-selector {
+  cursor: pointer;
 }
